Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
-    <link rel="icon" href="ChatGPT Image Nov 16, 2025, 08_54_29 PM.png">
+    <link rel="icon" href="Quickbilllogo.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
