--- a/index.html
+++ b/index.html
@@ -230,39 +230,60 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>QuickBill</h3>
-                    <p>Simple, fast, and clean digital billing for small businesses.</p>
-                </div>
-
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#generator">Invoice Generator</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4>Features</h4>
-                    <ul>
-                        <li>Instant Invoice Generation</li>
-                        <li>PDF Download</li>
-                        <li>Mobile Friendly</li>
-                        <li>No Signup Required</li>
-                    </ul>
-                </div>
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>QuickBill</h3>
+                <p>Simple, fast, and clean digital billing for small businesses.</p>
             </div>
 
-            <div class="footer-bottom">
-                <p>&copy; 2023 QuickBill. All rights reserved.</p>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#generator">Invoice Generator</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h4>Features</h4>
+                <ul>
+                    <li>Instant Invoice Generation</li>
+                    <li>PDF Download</li>
+                    <li>Mobile Friendly</li>
+                    <li>No Signup Required</li>
+                </ul>
+            </div>
+
+            <!-- NEW CONTACT BUTTONS -->
+            <div class="footer-section">
+                <h4>Contact the Creator</h4>
+
+                <a 
+                    href="https://wa.me/254784809224"
+                    class="contact-btn whatsapp-btn"
+                    target="_blank"
+                >
+                    WhatsApp Me
+                </a>
+
+                <a 
+                    href="https://instagram.com/developersalim"
+                    class="contact-btn instagram-btn"
+                    target="_blank"
+                >
+                    DM on Instagram
+                </a>
             </div>
         </div>
-    </footer>
+
+        <div class="footer-bottom">
+            <p>&copy; 2023 QuickBill. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 
     <!-- Script -->
     <script src="script.js" defer></script>
