--- a/index.html
+++ b/index.html
@@ -197,22 +197,22 @@
                         <div class="invoice-totals">
                             <div class="totals-row">
                                 <span>Subtotal:</span>
-                                <span id="subtotal">KSH 0.00</span>
+                                <span id="subtotal"> 0.00</span>
                             </div>
 
                             <div class="totals-row">
                                 <span>Tax:</span>
-                                <span id="taxTotal">KSH 0.00</span>
+                                <span id="taxTotal"> 0.00</span>
                             </div>
 
                             <div class="totals-row">
                                 <span>Discount:</span>
-                                <span id="discountTotal">KSH 0.00</span>
+                                <span id="discountTotal"> 0.00</span>
                             </div>
 
                             <div class="totals-row grand-total">
                                 <span>Total:</span>
-                                <span id="grandTotal">KSH 0.00</span>
+                                <span id="grandTotal"> 0.00</span>
                             </div>
                         </div>
                         
